--- a/src/test/recources/application.properties
+++ b/src/test/recources/application.properties
@@ -1,10 +1,7 @@
 # App
+server.port=8080
 leftover=5
 user.login=user
 user.password=password
 admin.login=admin
 admin.password=secret
-
-# H2
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2
