--- a/src/main/recources/application.properties
+++ b/src/main/recources/application.properties
@@ -1,10 +1,3 @@
-# App
-leftover=5
+spring.profiles.active=staging
 user.login=user
-user.password=password
 admin.login=admin
-admin.password=secret
-
-# H2
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2
